rbx_binary/src/tests/snapshots/rbx_binary__tests__util__stylesheet__encoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: text_roundtrip
---
num_types: 2
num_instances: 3
chunks:
  - Inst:
      type_id: 0
      type_name: StyleRule
      object_format: 0
      referents:
        - 0
        - 1
  - Inst:
      type_id: 1
      type_name: StyleSheet
      object_format: 0
      referents:
        - 2
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Capabilities
      prop_type: SecurityCapabilities
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - ":hover"
        - Frame
  - Prop:
      type_id: 0
      prop_name: Priority
      prop_type: Int32
      values:
        - 0
        - 0
  - Prop:
      type_id: 0
      prop_name: PropertiesSerialize
      prop_type: String
      values:
        - 01 00 00 00 04 00 00 00 53 69 7a 65 0a 00 00 80 3f 00 00 00 00 9a 99 59 3f 00 00 00 00
        - 01 00 00 00 04 00 00 00 53 69 7a 65 0a 00 00 80 3f 00 00 00 00 00 00 00 3f 00 00 00 00
  - Prop:
      type_id: 0
      prop_name: PropertyTransitionsSerialize
      prop_type: String
      values:
        - "\u0002\u0000\u0000\u0000\u0000\u0000"
        - 02 00 01 00 00 00 04 00 00 00 53 69 7a 65 24 cd cc 4c 3e 00 00 00 00 00 00 00 00 08 00 00 00 01 00 00 00 00
  - Prop:
      type_id: 0
      prop_name: DefinesCapabilities
      prop_type: Bool
      values:
        - false
        - false
  - Prop:
      type_id: 0
      prop_name: Selector
      prop_type: String
      values:
        - ":hover"
        - Frame
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
  - Prop:
      type_id: 1
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 1
      prop_name: Capabilities
      prop_type: SecurityCapabilities
      values:
        - 0
  - Prop:
      type_id: 1
      prop_name: Name
      prop_type: String
      values:
        - StyleSheet
  - Prop:
      type_id: 1
      prop_name: DefinesCapabilities
      prop_type: Bool
      values:
        - false
  - Prop:
      type_id: 1
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
  - Prop:
      type_id: 1
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prnt:
      version: 0
      links:
        - - 0
          - 1
        - - 1
          - 2
        - - 2
          - -1
  - End
